# Photo_Practica

./: CMakeLists.txt  README!!!!.txt  clientsform.cpp  clientsform.h  databasehelper.cpp  databasehelper.h  executorsform.cpp  executorsform.h  helpform.cpp  helpform.h  loginform.cpp  loginform.h  main.cpp  mainwindow.cpp  mainwindow.h  ordersform.cpp  ordersform.h  servicesform.cpp  servicesform.h
